// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.execution.failure;

option java_multiple_files = true;

import "io/harness/pms/contracts/execution/failure/failure_type.proto";

message FailureInfo {
  string errorMessage = 1 [deprecated = true];
  repeated FailureType failureTypes = 2 [deprecated = true];
  repeated FailureData failureData = 3;
}

message FailureData {
  string code = 1;
  string level = 2;
  string message = 3;
  repeated FailureType failureTypes = 4;
}
