// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.execution.run;

option java_multiple_files = true;

message NodeRunInfo {
  string whenCondition = 1;
  bool evaluatedCondition = 2;
  repeated ExpressionBlock expressions = 3;
}

message ExpressionBlock {
  string expression = 1;
  string expressionValue = 2;
  int32 count = 3;
}
