// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.execution.start;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/refobjects/ref_objects.proto";
import "io/harness/pms/contracts/execution/execution_mode.proto";

message NodeStartEvent {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  repeated io.harness.pms.contracts.refobjects.RefObject refObjects = 2;
  bytes facilitatorPassThoroughData = 3;
  bytes stepParameters = 4;
  io.harness.pms.contracts.execution.ExecutionMode mode = 5;
}
